<resources>
    <string name="app_name">旅影</string>
    <string name="phone_button">通过手机号快速登录/注册</string>
    <string name="account_button">账号密码登录</string>
    <!--账号登录页面-->
    <string name="account_button_one">账号登录</string>
    <string name="account_number_hint">输入邮箱/手机号</string>
    <string name="ps_hint">输入密码</string>
    <string name="phone_register">手机短信快速登录</string>
    <string name="forget_password">忘记密码?</string>
    <string name="click_register">登录</string>
    <string name="no_title">使用社交账号登录/注册</string>
    <string name="welcome_back">欢迎回来</string>
    <string name="todo">是否显示密码</string>
    <string name="todo1">微信账号登录</string>
    <string name="todo2">QQ账号登录</string>
    <string name="todo3">抖音账号登录</string>
    <string name="todo4">微博账号登录</string>

    <!--手机号登录页面-->
    <string name="import_phone">新密码</string>
    <string name="gain_verification">获取验证码</string>
    <string name="import_note">确认密码</string>
    <string name="skip">跳过</string>
    <string name="bind_mobile">绑定手机</string>
    <string name="retrieve_password">找回密码</string>
    <string name="next_step">下一步</string>
    <string name="submit">提交</string>
    <string name="change_password">修改密码</string>
</resources>