<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/layout_full"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/main_title_bar" />

    <LinearLayout
        style="@style/layout_full"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical"
        android:padding="40dp">

        <TextView
            android:id="@+id/welcome_back"
            style="@style/layout_wrap"
            android:layout_marginTop="20dp"
            android:text="@string/welcome_back"
            android:textColor="@color/black"
            android:textSize="40sp" />
        <!--输入手机号-获取验证码-->
        <LinearLayout
            style="@style/layout_vertical"
            android:layout_weight="0.2"
            android:orientation="horizontal"
            tools:ignore="NestedWeights">

            <EditText
                android:id="@+id/import_number"
                style="@style/layout_horizontal"
                android:layout_weight="2"
                android:autofillHints=""
                android:background="#F7F6Fb"
                android:hint="@string/import_phone"
                android:inputType="number"
                android:paddingStart="10dp"
                android:textColor="#000000"
                android:textColorHint="#8b909b"
                tools:ignore="NestedWeights,RtlSymmetry" />

            <Button
                android:id="@+id/gain_verification"
                style="@style/layout_horizontal"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:background="@drawable/phone_button"
                android:text="@string/gain_verification" />
        </LinearLayout>

        <!--输入验证码-->
        <EditText
            android:id="@+id/import_note"
            style="@style/layout_vertical"
            android:layout_marginTop="10dp"
            android:layout_weight="0.2"
            android:background="#F7F6Fb"
            android:hint="@string/import_note"
            android:importantForAutofill="no"
            android:inputType="number"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:textColor="#000000"
            android:textColorHint="#8b909b"
            tools:ignore="RtlSymmetry" />

        <!--账号/密码登录-->
        <TextView
            android:id="@+id/account_button"
            style="@style/layout_wrap"
            android:layout_marginTop="13sp"
            android:orientation="horizontal"
            android:text="@string/account_button"
            android:textColor="#666bf9"
            android:textSize="13sp" />

        <Button
            android:id="@+id/click_register"
            style="@style/layout_vertical"
            android:layout_marginTop="40dp"
            android:layout_weight="0.2"
            android:background="@drawable/phone_button"
            android:orientation="horizontal"
            android:text="@string/click_register"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        style="@style/layout_vertical"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingStart="80dp"
        android:paddingEnd="80dp"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon_wx"
            style="@style/layout_horizontal"
            android:layout_weight="1"
            android:background="@drawable/icon_wx"
            android:contentDescription="@string/todo1"
            tools:ignore="NestedWeights" />

        <ImageView
            android:id="@+id/icon_qq"
            style="@style/layout_horizontal"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/icon_qq"
            android:contentDescription="@string/todo2" />

        <ImageView
            android:id="@+id/icon_dy"
            style="@style/layout_horizontal"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/icon_dy"
            android:contentDescription="@string/todo3" />

        <ImageView
            android:id="@+id/icon_wb"
            style="@style/layout_horizontal"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/icon_wb"
            android:contentDescription="@string/todo4" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
    <TextView
        android:id="@+id/no_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/no_title"
        android:textColor="#828282"
        android:textSize="13sp" />
    </LinearLayout>

</LinearLayout>