<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include layout="@layout/main_title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="40dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/account_button_one"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <!---账号-（只能数字登录numberSigned）-->
        <EditText
            android:id="@+id/account_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="#f8f7fc"
            android:ems="10"
            android:hint="@string/account_number_hint"
            android:importantForAutofill="no"
            android:inputType="numberSigned"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="#8b909b" />
        <!--密码-->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="#f8f7fc">

            <EditText
                android:id="@+id/ps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#f8f7fc"
                android:ems="10"
                android:hint="@string/ps_hint"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="#8b909b" />

            <ImageView
                android:id="@+id/show_ps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:background="@drawable/none_show"
                android:contentDescription="@string/todo" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/phone_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:gravity="start"
                android:text="@string/phone_register"
                android:textColor="#1ad1ff"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:gravity="end"
                android:text="@string/forget_password"
                android:textColor="#1ad1ff"
                android:textSize="13sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/click_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/phone_button"
            android:text="@string/click_register"
            android:textSize="20sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="75dp">

        <ImageView
            android:id="@+id/icon_wx"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/icon_wx"
            android:contentDescription="@string/todo1" />

        <ImageView
            android:id="@+id/icon_qq"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/icon_qq"
            android:contentDescription="@string/todo2" />

        <ImageView
            android:id="@+id/icon_dy"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/icon_dy"
            android:contentDescription="@string/todo3" />

        <ImageView
            android:id="@+id/icon_wb"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/icon_wb"
            android:contentDescription="@string/todo4" />
    </LinearLayout>

    <TextView
        android:id="@+id/no_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="40dp"
        android:text="@string/no_title"
        android:textColor="#828282"
        android:textSize="13sp" />
</RelativeLayout>