<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="horizontal">
    <!--跳过-->
    <RelativeLayout
        android:id="@+id/skip"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/return_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/return_right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:layout_toStartOf="@+id/return_right"
            android:text="@string/skip"
            android:textColor="#000000" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="40dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/bind_mobile"
            android:textColor="@color/black"
            android:textSize="40sp" />
        <!--输入手机号-获取验证码-->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/import_number"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:autofillHints=""
                android:background="#F7F6Fb"
                android:hint="@string/import_phone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHint="#8b909b" />

            <Button
                android:id="@+id/gain_verification"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/phone_button"
                android:text="@string/gain_verification" />
        </RelativeLayout>

        <!--输入验证码-->
        <EditText
            android:id="@+id/import_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#F7F6Fb"
            android:hint="@string/import_note"
            android:importantForAutofill="no"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="#000000"
            android:textColorHint="#8b909b" />

        <!--账号/密码登录-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13sp"
            android:text="@string/account_button"
            android:textColor="#666bf9"
            android:textSize="13sp" />

        <Button
            android:id="@+id/click_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/phone_button"
            android:text="@string/submit"
            android:textSize="20sp" />
    </LinearLayout>
</RelativeLayout>