<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="40dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/change_password"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/import_number"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:autofillHints=""
            android:background="#F7F6Fb"
            android:hint="@string/import_phone"
            android:importantForAutofill="no"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="#000000"
            android:textColorHint="#8b909b" />


        <!--输入验证码-->
        <EditText
            android:id="@+id/import_note"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="#F7F6Fb"
            android:hint="@string/import_note"
            android:importantForAutofill="no"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="#000000"
            android:textColorHint="#8b909b" />

        <Button
            android:id="@+id/click_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/phone_button"
            android:text="@string/submit"
            android:textSize="20sp" />
    </LinearLayout>
</RelativeLayout>